--- a/Golf/Golf.csproj
+++ b/Golf/Golf.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cup.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Swing.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
